--- a/locales/en.yaml
+++ b/locales/en.yaml
@@ -190,7 +190,7 @@ login:
   pureRemember: days no need to login
   pureRememberInfo: After checking and logging in, will automatically log in to the system without entering your username and password within the specified number of days.
   pureSure: Sure Password
-  pureForget: Forget Password?
+  pureForget: Forget Password
   pureLogin: Login
   pureThirdLogin: Third Login
   purePhoneLogin: Phone Login
