使用pinia定义store组件；初始化login页

--- a/src/lang/locales/en_US.json
+++ b/src/lang/locales/en_US.json
@@ -1,5 +1,36 @@
 {
   "app": {
     "title": "easy-admin"
+  },
+  "login": {
+    "selectPlaceholder": "Please select/enter a company name",
+    "username": "Username",
+    "password": "Password",
+    "login": "Login",
+    "logging": "Logging...",
+    "code": "Verification Code",
+    "rememberPassword": "Remember me",
+    "switchRegisterPage": "Sign up now",
+    "rule": {
+      "tenantId": {
+        "required": "Please enter your tenant id"
+      },
+      "username": {
+        "required": "Please enter your account"
+      },
+      "password": {
+        "required": "Please enter your password"
+      },
+      "code": {
+        "required": "Please enter a verification code"
+      }
+    },
+    "social": {
+      "wechat": "Wechat Login",
+      "maxkey": "MaxKey Login",
+      "topiam": "TopIam Login",
+      "gitee": "Gitee Login",
+      "github": "Github Login"
+    }
   }
 }
