--- a/src/lang/locales/zh_CN.json
+++ b/src/lang/locales/zh_CN.json
@@ -1,5 +1,36 @@
 {
   "app": {
     "title": "easy-admin"
+  },
+  "login": {
+    "selectPlaceholder": "请选择/输入公司名称",
+    "username": "用户名",
+    "password": "密码",
+    "login": "登 录",
+    "logging": "登 录 中...",
+    "code": "验证码",
+    "rememberPassword": "记住我",
+    "switchRegisterPage": "立即注册",
+    "rule": {
+      "tenantId": {
+        "required": "请输入您的租户编号"
+      },
+      "username": {
+        "required": "请输入您的账号"
+      },
+      "password": {
+        "required": "请输入您的密码"
+      },
+      "code": {
+        "required": "请输入验证码"
+      }
+    },
+    "social": {
+      "wechat": "微信登录",
+      "maxkey": "MaxKey登录",
+      "topiam": "TopIam登录",
+      "gitee": "Gitee登录",
+      "github": "Github登录"
+    }
   }
 }
